# StreamAgent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yml  example.txt  pyproject.toml  requirements.txt  research_vault.db
examples/01_hello_world/: main.py
examples/03_ai_company/: main.py
scripts/: opensandbox_demo.py  run_planner.py  test_planner_mock.py
src/stream_agent/agents/chat/: __init__.py  agent.py  prompts.py
src/stream_agent/agents/coder/: __init__.py  agent.py  prompts.py
src/stream_agent/agents/planner/: __init__.py  agent.py  prompts.py
src/stream_agent/agents/writer/: __init__.py  agent.py  prompts.py
src/stream_agent/config/: settings.py
src/stream_agent/core/: context.py  envelope.py  exceptions.py
src/stream_agent/gateway/: auth.py  future_pool.py  server.py
src/stream_agent/memory/: base.py  layered.py  redis_plugin.py  sqlite_plugin.py  summarized_memory.py
src/stream_agent/orchestrator/: recovery_sweeper.py  router.py  supervisor.py
src/stream_agent/services/: asr_service.py  tts_service.py
src/stream_agent/utils/: llm_engine.py  logger.py  shadow_eval.py
src/stream_agent/web/: gradio_ui.py
src/stream_agent/worker/: base.py  idempotency.py  sandbox.py
tests/test_core/: test_core.py
tests/test_gateway/: test_audio_client.py  ws_client.py
tests/test_memory/: test_summarized_memory.py
tests/test_worker/: test_worker_base.py
